Adds more necessary files and R-CMD check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,18 +4,17 @@ Version: 0.1.0
 Description: Interact with Lifebit's CloudOS platform using R.
 Author: Sangram Keshari Sahu
 Maintainer: Sangram Keshari Sahu <sangram@lifebit.ai>  
-License: 
+License: MIT + file LICENSE
 URL: https://github.com/lifebit-ai/cloudos-R/
 BugReports: https://github.com/lifebit-ai/cloudos-R/issues
 Depends: 
     R (>= 3.0)
 Imports:
-    shiny,
-    rmarkdown,
-Suggests: 
-    covr,
+    httr,
+Suggests:
+    knitr,
 VignetteBuilder: knitr
 Encoding: UTF-8
 Language: en-US
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
