--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: cloudos
-Title: What the Package Does (One Line, Title Case)
+Title: R client library for CloudOS
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "First",
@@ -7,7 +7,8 @@ Authors@R:
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: The 'CloudOS' client library for R makes it easy to interact with 
+    CloudOS <https://cloudos.lifebit.ai/> in the R environment for analysis.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
