--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: cloudos
 Title: R client library for CloudOS
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Lifebit",
+           family = "Biotech",
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -19,6 +19,9 @@ Imports:
     utils
 Suggests: 
     testthat,
-    lintr
+    lintr,
+    knitr,
+    kableExtra
 URL: https://github.com/lifebit-ai/cloudos
 BugReports: https://github.com/lifebit-ai/cloudos/issues
+VignetteBuilder: knitr
