R-cmd-check in every push and PR

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,12 +1,5 @@
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-
 name: R-CMD-check
+on: [push, pull_request]
 
 jobs:
   R-CMD-check:
