--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,8 @@ pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   cohort_browser: cohort_browser.html
-last_built: 2020-08-11T18:20Z
+last_built: 2020-08-11T19:27Z
+urls:
+  reference: https://lifebit-ai.github.io/cloudos//reference
+  article: https://lifebit-ai.github.io/cloudos//articles
 
