--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,9 @@
 pandoc: 2.7.3
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles:
-  cohort_browser: cohort_browser.html
-last_built: 2020-08-11T13:12Z
+articles: []
+last_built: 2020-08-19T13:28Z
+urls:
+  reference: https://lifebit-ai.github.io/cloudos//reference
+  article: https://lifebit-ai.github.io/cloudos//articles
 
