--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports:
     httr,
-    utils
+    utils,
+    dplyr,
+    jsonlite
 Suggests: 
     testthat,
     lintr,
