--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(cloudos)
 export(create_cohort)
-export(extract_genotypic_data)
-export(extract_participants)
-export(filter_data)
+export(extract_samples)
+export(filter_metadata)
+export(filter_participants)
+export(filter_samples)
+export(genotypic_save)
+export(get_genotypic_table)
+export(get_samples_table)
 export(list_cohorts)
 export(search_filters)
 exportClasses(cloudos)
-exportClasses(cohort)
