list_cohorts into namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(cloudos)
 export(cohort)
-export(cohorts_list)
 export(create_cohort)
 export(extract_samples)
 export(filter_metadata)
@@ -11,6 +10,7 @@ export(filter_samples)
 export(genotypic_save)
 export(get_genotypic_table)
 export(get_samples_table)
+export(list_cohorts)
 export(search_filters)
 exportClasses(cloudos)
 exportClasses(cohort)
