--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,12 @@ export(filter_metadata)
 export(filter_participants)
 export(filter_samples)
 export(genotypic_save)
+export(get_cohort_filters)
 export(get_genotypic_table)
 export(get_samples_table)
 export(list_cohorts)
+export(plot_filters)
 export(search_filters)
 exportClasses(cloudos)
 exportClasses(cohort)
+import(ggplot2)
