--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,15 @@ export(create_cohort)
 export(extract_samples)
 export(filter_metadata)
 export(filter_participants)
-export(filter_samples)
 export(genotypic_save)
 export(get_cohort_filters)
+export(get_filter_statistics)
 export(get_genotypic_table)
 export(get_samples_table)
 export(list_cohorts)
 export(load_cohort)
 export(plot_filters)
-export(search_filters)
+export(search_phenotypic_filters)
 exportClasses(cloudos)
 exportClasses(cohort)
 import(ggplot2)
