adds apikey as auth method

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
 pandoc: 2.7.3
-pkgdown: 1.5.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-09-28T14:16Z
+articles: {}
+last_built: 2020-09-29T17:20Z
 urls:
   reference: https://lifebit-ai.github.io/cloudos//reference
   article: https://lifebit-ai.github.io/cloudos//articles
