Adds colour to selected range filters in the plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ export(cb_search_phenotypic_filters)
 export(connect_cloudos)
 exportClasses(cloudos)
 exportClasses(cohort)
+import(dplyr)
 import(ggplot2)
