Implements first complete set of cb_* functions for Cohort Browser endpoints (#6)
* fixes output and doc (#4)

* adds new end-points and impv to previous ones

* adds search filter end point

* impv

* removes vignettes

* new func,classes, methods

* updates

* minor fix

* impv updates

* get cohort info and create json objects

* creates cohort s4 object

* Document update

* cohorts_list -> list_cohorts

* list_cohorts into namespace

* TODO's grooming

* Adds first unit test 🎉

* more unit test

* Adds test-coverage to github actions workflow

* Adds functions for potting phenotypic filters

* halts test coverage

* cloudos() -> connect_cloudos()

* cohort description optional when making a new cohort

* typo fix

* cohort() -> load_cohort()

* search_filters() -> search_phenotypic_filters()

* functions renaming

* prefixes cb to all cohort browser functions

* Updates site

* Argument name `object` -> `cloudos`

* improved doc

* removes mongodb id from dataframes

* docs improved

* bar and histogram filters fix

* improves filter plot

* test and docs update

* value plot horizontal

* pkgdown site update

* adds apikey as auth method

* Adds plot title and labels

* Adds colour to selected value filters in the plot

* Adds colour to selected range filters in the plot

* ggplot theme chnages to theme_bw()

* Adds pkgdown to github actions, builds only on master (stable) push

* removes docs folder (pkgdown renders) as this is will auto generate in gh-pages branch

* Updates NEWS.md

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,3 +4,14 @@ authors:
     href: https://lifebit.ai
 development:
   mode: auto
+reference:
+- title: CloudOS
+  desc: Class and functions to interact with CloudOS-server
+  contents:
+  - '`cloudos-class`'
+  - '`connect_cloudos`'
+- title: Cohort-Browser
+  desc: Class and functions to interact with Cohort-Browser app
+  contents:
+  - '`cohort-class`'
+  - starts_with("cb_")
