--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,14 +14,19 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Imports:
+Imports: 
     httr,
-    utils
+    utils,
+    methods,
+    dplyr,
+    jsonlite,
+    ggplot2
 Suggests: 
-    testthat,
-    lintr,
-    knitr,
+    httptest,
     kableExtra,
-    rmarkdown
+    knitr,
+    lintr,
+    rmarkdown,
+    testthat
 URL: https://github.com/lifebit-ai/cloudos
 BugReports: https://github.com/lifebit-ai/cloudos/issues
