--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: 
+    knitr
 RoxygenNote: 7.1.1
 Imports: 
     httr,
