exported the new functions to namespcae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(cb_list_cohorts)
 export(cb_load_cohort)
 export(cb_plot_filters)
 export(cb_search_phenotypic_filters)
+export(cloudos_configure)
+export(cloudos_whoami)
 exportClasses(cohort)
 import(dplyr)
 import(ggplot2)
