--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(cb_apply_filter)
 export(cb_apply_filter_dry_run)
 export(cb_create_cohort)
-export(cb_extract_samples)
 export(cb_filter_metadata)
 export(cb_filter_participants)
 export(cb_get_cohort_filters)
@@ -14,8 +13,8 @@ export(cb_list_cohorts)
 export(cb_load_cohort)
 export(cb_plot_filters)
 export(cb_search_phenotypic_filters)
-export(connect_cloudos)
-exportClasses(cloudos)
+export(cloudos_configure)
+export(cloudos_whoami)
 exportClasses(cohort)
 import(dplyr)
 import(ggplot2)
