--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: cloudos
 Title: R Client Library for CloudOS
 Version: 0.01
-Authors@R: 
+Authors@R: c(
     person(given = "Sangram Keshari",
            family = "Sahu",
            role = c("aut", "cre"),
-           email = "sangram@lifebit.ai")
+           email = "sangram@lifebit.ai"),
+    person(given = "Lifebit Biotech Ltd.",
+           role = "cph")
+    )
 Description: The 'CloudOS' client library for R makes it easy to interact with 
     CloudOS <https://cloudos.lifebit.ai/> in the R environment for analysis.
 License: MIT + file LICENSE
