update + rename cb_filter_participants

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ export(cb_apply_filter)
 export(cb_apply_filter_dry_run)
 export(cb_create_cohort)
 export(cb_filter_metadata)
-export(cb_filter_participants)
 export(cb_get_cohort_filters)
 export(cb_get_filter_statistics)
 export(cb_get_genotypic_table)
 export(cb_get_samples_table)
 export(cb_list_cohorts)
 export(cb_load_cohort)
+export(cb_participant_count)
 export(cb_plot_filters)
 export(cb_search_phenotypic_filters)
 export(cloudos_configure)
