--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,11 @@ Imports:
     httr,
     utils,
     methods,
-    dplyr,
+    dplyr (>= 1.0.0),
     jsonlite,
     rappdirs,
-    ggplot2
+    ggplot2,
+    tibble
 Suggests: 
     httptest,
     kableExtra,
