--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(cb_load_cohort)
 export(cb_participant_count)
 export(cb_plot_filters)
 export(cb_search_phenotypes)
+export(cb_set_columns)
 export(cloudos_configure)
 export(cloudos_whoami)
 export(phenotype)
