--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,44 +1,35 @@
+# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
-    push:
-      branches: master
-  
-  name: pkgdown
-  
-  jobs:
-    pkgdown:
-      runs-on: macOS-latest
-      env:
-        GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      steps:
-        - uses: actions/checkout@v2
-  
-        - uses: r-lib/actions/setup-r@master
-  
-        - uses: r-lib/actions/setup-pandoc@master
-  
-        - uses: r-lib/actions/setup-tinytex@v1
-  
-        - name: Query dependencies
-          run: |
-            install.packages('remotes')
-            saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
-            writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
-          shell: Rscript {0}
-  
-        - name: Install dependencies
-          run: |
-            install.packages("remotes")
-            # To get links for homepage
-            remotes::install_cran("devtools")
-            remotes::install_deps(dependencies = TRUE)
-            remotes::install_dev("pkgdown")
-          shell: Rscript {0}
-  
-        - name: Install package
-          run: R CMD INSTALL .
-  
-        - name: Deploy package
-          run: |
-            git config --local user.email "actions@github.com"
-            git config --local user.name "GitHub Actions"
-            Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
+  push:
+    branches: [main, master]
+  release:
+    types: [published]
+  workflow_dispatch:
+
+name: pkgdown
+
+jobs:
+  pkgdown:
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: r-lib/actions/setup-pandoc@v1
+
+      - uses: r-lib/actions/setup-r@v1
+        with:
+          use-public-rspm: true
+
+      - uses: r-lib/actions/setup-r-dependencies@v1
+        with:
+          extra-packages: pkgdown
+          needs: website
+
+      - name: Deploy package
+        run: |
+          git config --local user.name "$GITHUB_ACTOR"
+          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
