--- a/.github/workflows/pkgdown-test.yaml
+++ b/.github/workflows/pkgdown-test.yaml
@@ -1,13 +1,10 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
-  push:
+  pull_request:
     branches: [main, master]
-  release:
-    types: [published]
-  workflow_dispatch:
 
-name: pkgdown-deploy-ghpages
+name: pkgdown-build-test
 
 jobs:
   pkgdown:
@@ -32,4 +29,4 @@ jobs:
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
+          Rscript -e 'pkgdown::build_site_github_pages(new_process = FALSE)'
