--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cloudos
 Title: R Client Library for CloudOS
-Version: 0.3.0
+Version: 0.4.0
 Authors@R: c(
     person(given = "Sangram Keshari",
            family = "Sahu",
@@ -18,7 +18,7 @@ Authors@R: c(
            role = "cph")
     )
 Description: The 'CloudOS' client library for R makes it easy to interact with 
-    CloudOS <https://cloudos.lifebit.ai/> in the R environment for analysis.
+    CloudOS in the R environment for analysis.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
