--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -7,11 +7,11 @@
 #     env:
 #       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 #     steps:
-#       - uses: actions/checkout@v2
+#       - uses: actions/checkout@v3
 
-#       - uses: r-lib/actions/setup-r@master
+#       - uses: r-lib/actions/setup-r@v2.3.1
 
-#       - uses: r-lib/actions/setup-pandoc@master
+#       - uses: r-lib/actions/setup-pandoc@v2.3.1
 
 #       - name: Query dependencies
 #         run: |
